--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
 header{
     background-color:#faf0dc;
     padding: 1px;
+    border-radius: 10px;
 }
 nav{
     text-align: center;
@@ -12,7 +13,7 @@ nav{
 }
 nav img{
     width: 130px;
-    height: 130pxpx;
+    height: 130px;
     border-radius: 30px;
     float: left;
 }
@@ -21,12 +22,12 @@ nav ul{
     align-items: center;
     justify-content: space-around;
 }
-nav ul:hover{
+nav ul a:hover{
     text-decoration: underline;
 }
 nav a{
     text-decoration: none;
-    color: dimgrey;
+    color: rgb(29, 29, 29);
     font-size: 30px;
 }
 h1{
@@ -36,17 +37,42 @@ h1{
     margin: 10px;
 }
 .h2{
+    margin: 10px;
     align-items: center;
 }
 h3{
     margin: 10px;
 }
+.texto{
+    text-align: center;
+}
 .card1{
-    margin: 10px;
-    width: 300pxpx;
+    margin: 20px;
+    width: 60%;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0px 5px 10 px #ccc;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+button{
+    margin:15px;
+    padding: 3px;
+    text-align: center;
+    border-radius: 35px;
+}
+button:hover{
+    background-color: #b8b6b6;
+}
+button a{
+    text-decoration: none;
+    color: #555454;
+}
+.img{
+    width: 500px;
+    height: 400px;
+    border-radius: 15px;
 }
 .imagen1{
     width: 225px;
@@ -59,11 +85,11 @@ h3{
     align-items: center;
 }
 .card{
-    margin: 20px;
+    margin: 10px;
     width: 300px;
     border-radius: 15px;
     overflow: hidden;
-    box-shadow: 0px 5px 10px #ccc;
+    box-shadow: 0px 2px 5px #555454;
     font-family: "Open Sans", sans-serif;
 }
 .card img{
@@ -77,4 +103,13 @@ h3{
 .card:hover{
     background-color: #faf0dc;
     transform: scale(1.0);
+}
+footer{
+    background-color:#faf0dc;
+    padding: 5px;
+    border-radius: 15px;
+}
+footer p{
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
 }
